--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "normalize.css": "*",
         "animate.css": "^3.5.1",
-        "protonet/jquery.inview": "^1.1.2"
+        "protonet/jquery.inview": "^1.1.2",
+        "jquery.maskedinput": "jquery-maskedinput#^1.4.1"
     }
 }
